# UploadMyself

./: .dockerignore  .env.example  .gitattributes  .gitignore  ARCHITECTURE.md  Dockerfile.backend  INSTALL.md  LICENSE  Makefile  PROJECT_PLAN.md  README.md  TODO.md  docker-compose.yml  entrypoint.sh  install.sh  pyproject.toml  run.sh  start.sh  stop.sh  uninstall.sh
backend/: Dockerfile  __init__.py  config.py  go.mod  go.sum  main.go  main.py
backend/agent/: agent.go
backend/api/: avatar_2d.py  avatar_3d.py  distill.py  handlers.go  router.go  skill.py  tasks.py  voice.py
backend/cmd/upme/: main.go
backend/config/: config.go
backend/core/: __init__.py
backend/core/avatar_engine/: __init__.py  engine.go
backend/core/distill_engine/: __init__.py  engine.go
backend/core/skill_engine/: __init__.py  engine.go
backend/core/voice_engine/: __init__.py  engine.go
backend/handler/: agent.go  handler.go  task.go  upload.go
backend/internal/llm/: client.go
backend/middleware/: cors.go
backend/migrations/: 001_init.sql
backend/model/: model.go
backend/models/: models.go
backend/services/: model_registry.py  services.go
backend/services/provider/: base.py  cloud.go  local.go  provider.go
backend/workers/: workers.go
docs/: architecture.md  models.md
frontend/: index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  index.css
ml/charactergen/: requirements_uploadmyself.txt  webui.py
ml/scripts/: analyze_corpus.py  detect_face.py  download_models.sh  extract_text.py  generate_avatar.py  ml_service.py  preprocess_audio.py  requirements.txt  voice_clone_train.py  voice_synthesize.py
scripts/: install_native.sh
tests/: api_test.go  test_api.py
(+54 files in other folders)
