[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "uploadmyself"
version = "0.1.0"
description = "克隆你自己 — 数字分身生成平台"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Bruce-Sakura" },
]

dependencies = [
    # Web
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "python-multipart>=0.0.9",
    "websockets>=12.0",
    # Task queue
    "celery[redis]>=5.4",
    # Database
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    # Cache & Storage
    "redis>=5.0",
    "minio>=7.2",
    # ML Core
    "torch>=2.3",
    "torchaudio>=2.3",
    "torchvision>=0.18",
    "numpy>=1.26",
    # Audio
    "librosa>=0.10",
    "soundfile>=0.12",
    "noisereduce>=3.0",
    "pydub>=0.25",
    # Vision
    "insightface>=0.7",
    "onnxruntime-gpu>=1.17",
    "opencv-python>=4.9",
    "Pillow>=10.3",
    # LLM & Diffusion
    "diffusers>=0.28",
    "transformers>=4.40",
    "accelerate>=0.30",
    "sentencepiece>=0.2",
    "tiktoken>=0.7",
    # Utils
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "httpx>=0.27",
    "aiofiles>=23.2",
    "rich>=13.7",
    "loguru>=0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
strict = true
